# ModelarDB-DMMAI

./: README.md  docker-compose-cluster.yml
curate_data/: Dockerfile  main.py  requirements.txt
ingest_data/: Cargo.toml  Dockerfile
ingest_data/src/: main.rs  util.rs
