[package]
name = "ingest_data"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.0.0"
modelardb_embedded = { git = "https://github.com/ModelarData/ModelarDB-RS.git", rev="c07fd61"}
modelardb_types = { git = "https://github.com/ModelarData/ModelarDB-RS.git", rev="c07fd61" }
tokio = "1.44.2"
